# ocr-service

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  database.py  docker-compose.yml  example.py  flake.nix  history_service.py  main.py  pyproject.toml  requirements.txt  test_main.py  verify_structure.py
.github/workflows/: ci-docker-publish.yml  release-publish.yml  tests.yaml
docs/: CI.md
templates/: history.html  job_detail.html
